<resources>
    <string name="app_name">IPM</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_guide">GuideActivity</string>
    <string name="text_button_guide_view">立即体验</string>
    <string name="text_please_login">请登录</string>
    <string name="text_introduce_default">这个人很懒，什么都没有留下</string>
    <string name="title_activity_essay">EssayActivity</string>
    <string name="action_share">分享</string>
    <string name="action_collect">收藏</string>
    <string name="action_like">喜欢</string>
    <string name="title_activity_comment">CommentActivity</string>
    <string name="action_comment">评论</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="text_login">登陆</string>
    <string name="text_register">注册</string>
    <string name="text_account">账号</string>
    <string name="text_password">密码</string>
    <string name="text_phone">手机号</string>
    <string name="toast_wifi_connection">无线网络连接成功</string>
    <string name="toast_mobile_connection">移动网络连接成功</string>
    <string name="toast_no_connection">当前无网络连接</string>
    <string name="hint_input_name">请输入昵称</string>
    <string name="hint_input_introuce">个性签名</string>
    <string name="hint_input_phone">请输入手机号</string>
    <string name="hint_input_password">请输入密码</string>
    <string name="hint_comment_dialog">不吐不快</string>
    <string name="dialog_send">发送</string>
    <string name="dialog_cancel">取消</string>
    <string name="toast_net_work_not_avaiable">网络出了点小差</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>




</resources>
