<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.chenjensen.ipm.activity.EssayActivity">

    <item android:id="@+id/action_share" android:title="@string/action_share"
        android:orderInCategory="80" app:showAsAction="ifRoom"
        android:icon="@drawable/toolbar_menu"/>
    <item android:id="@+id/action_like" android:title="@string/action_like"
        android:orderInCategory="70" app:showAsAction="ifRoom"
        android:icon="@drawable/toolbar_menu"
        />
    <item android:id="@+id/action_collect" android:title="@string/action_collect"
        android:icon="@drawable/toolbar_menu" app:showAsAction="ifRoom"
        android:orderInCategory="60"/>

</menu>
