<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

    <EditText
        android:id="@+id/login_fragment_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_account"
        />

    <EditText
        android:id="@+id/login_fragment_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/text_password"
        />
        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/login_fragment_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/MyButton"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="@string/text_login"/>

        <Button
            android:id="@+id/login_fragment_register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:theme="@style/MyButton"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="@string/text_register"/>

    </LinearLayout>

</LinearLayout>